ZH/6.1/开发指南/开发规范/后台开发规范/代码规范/日志规范.md
生产和测试环境中需要日志来记录、跟踪和分析系统的运行状态，但是有太多带有杂讯的日志又会影响跟踪，甚至可能对系统的运行带来影响。

## 1 日志级别

- ERROR

    ERROR 是最高级别错误，反映系统发生了非常严重的故障，无法自动恢复到正常态工作，必须通知到开发者及时修复。系统需要将错误相关痕迹以及错误细节记录 ERROR 日志中，方便后续人工回溯解决。

- WARNING

    WARNING 是低级别异常日志，反映系统在业务处理时触发了异常流程，但系统可恢复到正常态，下一次业务可以正常执行。但 WARN 级别问题需要开发人员给予足够关注，往往表示有参数校验问题或者程序逻辑缺陷，当功能逻辑走入异常逻辑时，应该考虑记录 WARN 日志。

- INFO

    INFO 日志主要记录系统关键信息，旨在保留系统正常工作期间关键运行指标，开发人员可以将初始化系统配置、业务状态变化信息，或者用户业务流程中的核心处理记录到 INFO 日志中，方便日常运维工作以及错误回溯时上下文场景复现。

- DEBUG

    开发人员可以将各类详细信息记录到 DEBUG 里，起到调试的作用，包括参数信息，调试细节信息，返回值信息等等。其他等级不方便显示的信息都可以通过 DEBUG 日志来记录。

## 2 日志格式

### 2.1 SaaS

开发框架提供了 logger 对象，建议使用 logger 对象记录日志。使用方法如下：

```python
from blueapps.utils.logger import logger         # 普通日志
from blueapps.utils.logger import logger_celery  # celery日志

logger.error('严重错误！')
logger.warning('异常错误')
logger.info('一般信息')
logger.debug('调试信息')

# 希望打印error级别的错误日志时打印调用栈信息
logger.exception('严重错误！')

```

可在开发者中心查询应用的日志，日志内容包括：调用的文件、调用的函数、所在的行号、日志详细信息

### 2.2 后台服务

```bash
时间戳 [模块/包/类名|方法名] 文件名|行号|PID|TID|REQID 日志级别 日志内容
```

其中：

- `时间戳` -  `YYYY-mm-dd HH:MM:SS`
- `PID` - 进程 ID
- `TID` -  线程 ID
- `REQID` - 用于链路追踪的请求 ID

> 根据的不同编程语言的特点，可以对日志格式做适当调整。不存在的字段不必完全相符，意义在于能快速识别产生日志内容的基本情况，缩小问题排查范围

## 3 日志内容要求

- 打印日志时，必须记录上下文信息，避免使用固定字符串
  - 错误的例子

    ```bash
    2018-07-11 JOB接口调用失败
    ```

  - 正确的例子

    ```bash
    2018-07-11 JOB接口调用失败 接口名称(manage_proc) 请求参数(xxx=yyy) 返回参数(xxx=yyy) 状态码(403)
    ```

- SaaS 请求日志，建议打印当前请求的用户名，便于问题定位

- 禁止打印敏感信息，如`app_secret`等密钥信息

- 打印日志时，如果日志内容包含参数，请通过 args 传参，而不要直接进行字符串格式化

    ```python
    # Bad
    logger.info("bk_biz_id->[%s] result_table->[%s] refresh consul config success." % (bk_biz_id, result_table.table_id))

    # Good
    logger.info("bk_biz_id->[%s] result_table->[%s] refresh consul config success.", bk_biz_id, result_table.table_id)
    ```

## 4 日志打印要求

- 调用外部系统 API 时**必须**打印日志，记录请求参数和返回参数
- 避免重复打印日志，浪费磁盘空间
- 正确使用日志级别，生产环境中禁止输出 debug 日志
- 谨慎记录日志，日志埋点并非越多越好，日志打印过于频繁会产生性能问题
- 避免打印无意义的日志，会对问题排查造成干扰。记录日志时请思考：这些日志真的有人看吗？看到这条日志你能做什么？能不能给问题排查带来好处？
